# lab1-aes-tool

./: .gitignore  CMakeLists.txt
results/: lab1_aes_benchmark_full.csv  lab1_aes_benchmark_full_ubuntu.csv  lab1_aes_benchmark_quick.csv  lab1_aes_benchmark_quick_ubuntu.csv  ubuntu_environment.txt
src/: benchmark.cpp  main.cpp
